syntax = "proto3";

package pathwar.es;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option go_package = "pathwar.land/go/pkg/pwes";
option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

import "pwdb.proto";

message EventUserRegister {
  int64 id = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Timestamp createdAt = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
}

message EventUserLogin {
  int64 id = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Timestamp createdAt = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
}

message EventUserSetPreferences {
  int64 id = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Timestamp createdAt = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
}

message EventUserDeleteAccount {
  int64 id = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Timestamp createdAt = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
}

message EventSeasonChallengeBuy {
  int64 id = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Timestamp createdAt = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  pathwar.db.SeasonChallenge seasonChallenge = 3;
  pathwar.db.Team team = 4;
}

message EventChallengeSubscriptionValidate {
  int64 id = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Timestamp createdAt = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  pathwar.db.SeasonChallenge seasonChallenge = 3;
  pathwar.db.Team team = 4;
}

message EventCouponValidate {
  int64 id = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Timestamp createdAt = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
}

message EventAgentRegister {
  int64 id = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Timestamp createdAt = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
}

message EventAgentChallengeInstanceCreate {
  int64 id = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Timestamp createdAt = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
}

message EventAgentChallengeInstanceUpdate {
  int64 id = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Timestamp createdAt = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
}

message EventTeamCreation {
  int64 id = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Timestamp createdAt = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
}

message EventTeamInviteSend {
  int64 id = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Timestamp createdAt = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
}

message EventTeamInviteAccept {
  int64 id = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Timestamp createdAt = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
}
